# QLink

./: CMakeLists.txt  QLink.cpp  QLink.h  QLink.pro  README.md  constant.h  controller.cpp  controller.h  enum.h  linemask.cpp  linemask.h  main.cpp  menu.cpp  menu.h  playinterface.cpp  playinterface.h  qblock.cpp  qblock.h  qlink.cpp  qlink.h  role.cpp  role.h  statusui.cpp  statusui.h  unittest.cpp  unittest.h
